repair thia langauge

--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -97,43 +97,43 @@
     "cherry_room": "ห้องสำหรับสี่ท่าน (ห้องเชอร์รี่)"
   },
   "campsite": {
-    "title": "บทนำ",
-    "about": "พื้นที่ตั้งแคมป์ตั้งอยู่ในสวนพฤกษศาสตร์อัลไพน์ สวนสาธารณะมีสระว่ายน้ำระบบนิเวศสระว่ายน้ำน้ำสวนยาจีนสวนหญ้าทะเลดอกไม้ ฯลฯ ล้อมรอบด้วยภูเขาจากภูเขาหิมะควบคุมสถานีเพื่อ sevenka ภูเขาวิลล่าคุณสามารถเห็นที่ไม่รู้จัก จุดสูงสุด เป็นสวรรค์ของฤดูร้อนที่หายากในประเทศจีน เป็นสวรรค์ของฤดูร้อนที่หายากในประเทศจีน เป็นรีสอร์ทฤดูร้อนตามธรรมชาติในประเทศ",
-    "order_notice": "พื้นที่ตั้งแคมป์จะเปิดจองระบบเวลา 8.00 น. ของวันที่ 1 ของเดือน (รวม 3 เดือนของเดือน)",
-    "order_example": "ตัวอย่างเช่นวันที่ 1 พฤษภาคมเวลา 8:00 น. ถึงวันที่ 31 กรกฎาคม 1 กุมภาพันธ์เวลา 8:00 น. เปิดให้สิ้นเดือนกุมภาพันธ์ของปีถัดไป",
-    "telephone": "โทรศัพท์ 04-25901470 / 04-25901265 โทรสาร 04-25901088",
-    "coffee_bar": "ถัดจากศูนย์จัดการตั้งแคมป์มีบาร์กาแฟป่า ต้นซีดาร์อายุ 30 ปียืนอยู่ข้างๆมันดื่มชานมลาเวนเดอร์พิเศษจากฟาร์มและวันที่จะป่า!",
-    "alert": "เพื่อให้มั่นใจถึงความปลอดภัยของป่าไม้ห้ามห้ามสัมผัสกับพื้นดินโดยเด็ดขาดและสามารถปรุงอาหารได้โดยเครื่องอัดก๊าซหรือบาร์บีคิวเท่านั้น บริเวณตั้งแคมป์มีบริการน้ำเต็มรูปแบบและน้ำอุ่นตลอด 24 ชั่วโมง",
-    "rule": "พื้นที่ตั้งแคมป์นี้ตั้งอยู่ภายในอุทยานแห่งชาติ Shei-Pa ค่ายควรปฏิบัติตามกฎต่อไปนี้:",
-    "rule_01": " เตาย่างไฟจับเพลิงติดไฟประทัดเป็นสิ่งต้องห้ามโดยเด็ดขาดในพื้นที่ตั้งแคมป์เตาบาร์บีคิวใช้สำหรับปิ้งบาร์บีคิวและห้ามใช้ไฟคาร์บอนสัมผัสพื้นโดยตรง",
-    "rule_02": "ไม่อนุญาตให้นำสัตว์เลี้ยงเข้ามาในบริเวณที่ตั้งแคมป์และจะมีการประกาศระเบียบที่เกี่ยวข้องโดยสำนักจัดการป่า",
-    "rule_03": "อย่าปีนต้นไม้ดอกไม้และผลไม้ดองโดยพลการ",
-    "rule_04": "ขยะในพื้นที่ตั้งแคมป์มีอยู่ 2 ประเภทคือการรีไซเคิลขยะจากห้องครัวและขยะทั่วไป (รวมถึงการรีไซเคิลทรัพยากร)",
-    "rule_05": "ห้ามใช้เครื่องกำเนิดไฟฟ้าและอุปกรณ์เสียงเดซิเบลสูงในบริเวณที่พัก",
-    "rule_06": "นักท่องเที่ยวในค่ายต้องห้ามหลังจากเวลา 22.00 น. ในตอนเย็นและโปรดหยุดกิจกรรมของคุณและลดปริมาณลงเพื่อไม่ให้ส่งผลต่อความสงบสุขของผู้อื่น",
-    "rule_07": "ผู้เข้าชมที่เข้าสู่บัญชีว่างเปล่าไม่ควรรับประทานขนมเช่นขนมบิสกิตในบัญชีว่างเปล่าเพื่อหลีกเลี่ยงแมลงเข้า",
-    "rule_08": "เวลาตั้งแคมป์คือ 12:00 น. และเวลาตั้งแคมป์คือ 12:00 น. ในวันถัดไป",
-    "rule_09": "2 คนในบ้านที่น่ารัก 4 คนในบ้านภูมิทัศน์และห้องพักที่ 14:00 น. เช็คเอ้าท์เวลา 11.00 น. ในวันถัดไป",
-    "rule_10": "บริเวณที่ตั้งแคมป์กาแฟป่าให้บริการอาหารเช้าเครื่องดื่มแซนด์วิชกุ๊กชูก๋วยเตี๋ยวไก่และอื่น ๆ",
-    "rule_11": "ศูนย์จัดการค่ายเปิดทำการตั้งแต่เวลา 7:00 - 21:30 น.",
-    "rule_12": "ผู้ที่อยู่นอกพื้นที่พักพิงจะปรุงอาหารในบริเวณตั้งแคมป์สำหรับทุก 6 คนเพื่อเรียกเก็บค่าสถานที่ทำอาหารของ NT$200, 12 คน NT$400 และอื่น ๆ",
-    "rule_13": "เมื่อผู้โดยสารเดินเข้าไปในบริเวณที่ตั้งแคมป์ต้องแจ้งไปยังศูนย์จัดการและขอใบแจ้งหนี้เหมือนกันเพื่อเป็นหลักฐานในการใช้พื้นที่ตั้งแคมป์",
-    "rule_15": "พื้นที่ทั้งหมดของพื้นที่ตั้งแคมป์มีแสงสว่างในเวลากลางคืน",
-    "rule_16": "เวลาน้ำประปาร้อน: ห้องอาบน้ำสาธารณะในพื้นที่ A1, D, E: น้ำร้อน 24 ชั่วโมง (รายวัน) พร้อมเครื่องเป่าผม ห้องสุขาสาธารณะทั้งสองด้านของศูนย์จัดการ: หม้อไอน้ำมีเครื่องทำน้ำร้อนตั้งแต่เวลา 17:00 น. - 22:00 น. (เฉพาะวันหยุดราชการ) และมีเพียงน้ำร้อน 24 ชัวโมง (ครั้งสุดท้ายสำหรับชายและหญิง) ด้วย เครื่องเป่าผม",
-    "rule_17": "มีทางออกสาธารณะและตู้เย็นด้านหน้าศูนย์บริหารจัดการสำหรับผู้เข้าชม",
-    "rule_18": "การจองทั้งหมดในบริเวณตั้งแคมป์รวมถึงที่พักและบ้านไม้หากขั้นตอนการโอนเงินไม่เสร็จสมบูรณ์ในวันนี้พื้นที่ตั้งแคมป์สงวนสิทธิ์ในการลบ"
-  },
-  "tea_saloon": {
-    "name": "รถชาไร่",
-    "tel": "โทรศัพท์: 04-25901268",
-    "fax": "โทรสาร: 04-25901081",
-    "address": "ที่อยู่: No. 7-7, Wuling Road, Pingli, Pinghe Township, Taichung City, 42495 (Tea Village)"
-  },
-  "visitor_center": {
-    "name": "ศูนย์บริการฟาร์ม",
-    "tel": "โทรศัพท์: 04-25901257 ext.: 1118",
-    "fax": "โทรสาร: 04-25901353",
-    "address": "ที่อยู่: No. 3 Wuling Road, Pingli, Pinghe Township, Taichung City, 42495 (Travel Service Center)"
+    "about": "โรงแรมหวู่หลิงฟาร์มแคมป์ตำแหน่งในอัลไพน์สวนพฤกษศาสตร์ สวนระบบนิเวศสระ สระน้ำโรงงาน แพทย์แผนจีนสวน สวนหญ้า ดอกไม้ตั้ง ฯลฯ ล้อมรอบ ด้วยภูเขา จากสถานีควบคุมภูเขาหิมะเจ็ดบัตรวิลล่า สามารถเห็นได้อย่างชัดเจนสูงสุดนิรนาม เจียนชานกลาง ใต้ทะเลสาบภูเขายอด เขา Luo Yelun, Taoshan ชาน lan aqua เทียนธรรมชาติ เป็นประเทศจอดหายากธรรมชาติฤดูร้อนในภูมิภาค",
+    "camp_pallet": "ตำแหน่งค่ายแคมป์",
+    "price": "การกำหนดราคา",
+    "remark": "หมายเหตุ",
+    "a1_car_pallet": "aที่ตั้งA1คณะกรรมการอำเภออัตโนมัติแท่นวางสินค้า",
+    "a1_car_pallet_type": "ต้องเป็นตัวเองทำเต็นท์ แคมป์พาเลทไม้ 。(A1ที่ตั้ง300 * 300 ซม，Aที่ตั้ง320 * 300 ซม)。",
+    "a1_car_pallet_remark": "ใช้ไฟซ็อกเก็ตบล็อก b โต๊ะรับประทานอาหารพิเศษA1ตำบลอาบน้ำ ที่จอดรถพื้นที่พิเศษ",
+    "b_tent": "bที่ตั้งเต็นท์ทางอากาศ",
+    "b_tent_type": "มีการนั่งอยู่ในเต๊นท์ ปูที่นอน (210 * 240 ซม)ดพร้อม ชั้นสูงซม. (b)或80 ซม. (BA)。",
+    "b_tent_remark": "มีการใช้ห้องน้ำสาธารณะทั้งสองด้านของการจัดการศูนย์ ใช้สาธารณะที่จอดรถ 'สัตว์เลี้ยงห้าม ปลั๊กไฟฟ้า โต๊ะรับประทานอาหารพิเศษภายใน ",
+    "c_tent": "cพื้นที่ดินว่างเปล่าบัญชี",
+    "c_tent_type": "มีการนั่งอยู่ในเต๊นท์ ปูที่นอน(240 * 240 ซม)。",
+    "c_tent_remark": "ไฟซ็อกเก็ตบล็อก b โต๊ะรับประทานอาหารพิเศษ ใช้ของการจัดการศูนย์อาบน้ำ ที่จอดรถพิเศษ",
+    "c_car_pallet": "cตำแหน่งที่ตั้งค่ายรถแท่นวางสินค้า",
+    "c_car_pallet_type": "ต้องเองสร้างเต็นท์ แคมป์ทไม้(420 * 420 ซม)。",
+    "ซี car_pallet_remark": "ไฟซ็อกเก็ตบล็อก b โต๊ะรับประทานอาหารพิเศษ ใช้ของการจัดการศูนย์อาบน้ำ ที่จอดรถพิเศษ",
+    "d_car_pallet": "D1ตำแหน่งที่ตั้งค่ายรถแท่นวางสินค้า",
+    "d_car_pallet_type": "ต้องเป็นตัวเองทำเต็นท์ แคมป์พาเลทไม้ 。(300 * 320 ซม)。",
+    "d-car_pallet_remark": "ใช้ซ็อกเก็ตพลังงาน ตารางรับประทานDตำบลอาบน้ำ ที่จอดรถพื้นที่พิเศษ",
+    "e_car_pallet": "d、Eคณะกรรมการอำเภออัตโนมัติแท่นวางสินค้า",
+    "e_car_pallet_type": "ต้องเป็นตัวเองทำเต็นท์ แคมป์พาเลทไม้ (d1 ~ d12 300 ซม. * 320 ซม.ส่วนที่เหลือ220 * 320 ซม)。",
+    "อี car_pallet_remark": "ใช้ซ็อกเก็ตพลังงาน ตารางรับประทานD區/ eตำบลอาบน้ำ ที่จอดรถพื้นที่พิเศษ",
+    "camp_cottage": "บ้านค่าย",
+    "a1_cottage": "A1 อำเภอวิวเฮาส์",
+    "weekdays": "วันธรรมดา",
+    "holiday": "ฮอลิเดย์",
+    "a1_cottage_type": "สว่าง Padded (240 * 240 ซม)เครื่องนอนต้องให้ นอนหลับการคน",
+    "al_cottage_remark": "มีปลั๊กไฟฟ้า(สำหรับโทรศัพท์มือถือชาร์จเท่านั้น)โต๊ะรับประทานอาหารพิเศษ ใช้A1ห้องน้ำสาธารณะ พื้นที่จอดรถพิเศษ ห้ามนำสัตว์เลี้ยงภายใน",
+    "a_cottage": "a、D.บ้านแคมป์ที่น่ารัก",
+    "a_cottage_type": "สว่าง Padded (195 * 195 ซม)สามารถนอนหลับ3คน เตียงต้องเป็นตนเองเจ้าของ",
+    "a_cottage_remark": "มีปลั๊กไฟฟ้า(สำหรับโทรศัพท์มือถือชาร์จเท่านั้น)โต๊ะรับประทานอาหารพิเศษ ใช้A1區/ dห้องน้ำสาธารณะ พื้นที่จอดรถพิเศษ ห้ามนำสัตว์เลี้ยงภายใน ",
+    "b_cottage": "b.ทาสีบ้าน",
+    "b_cottage_type": "นอนเสื่อ (187 ซม. * 220 ซม.)สูง100 เซนติเมตร (BH)。",
+    "b_cottage_remark": "มีการใช้ห้องน้ำสาธารณะทั้งสองด้านของการจัดการศูนย์ ใช้สาธารณะที่จอดรถ สัตว์เลี้ยงห้าม ปลั๊กไฟฟ้า โต๊ะรับประทานอาหารพิเศษภายใน ",
+    "d_cottage": "D1.บ้านในฝัน",
+    "d_cottage_type": "ในD1ตั้งแคมป์บริเวณใหม่ชาเล่ต์ นอน2 + 1คน",
+    "d_cottage_remark": "มีปลั๊กไฟฟ้า(สำหรับโทรศัพท์มือถือชาร์จเท่านั้น)โต๊ะรับประทานอาหารพิเศษ ใช้Dห้องน้ำสาธารณะ พื้นที่จอดรถพิเศษ ห้ามนำสัตว์เลี้ยงภายใน "
   },
   "ticket": {
     "ticket_price": "แผ่นค่าธรรมเนียมการเข้าชม",
@@ -246,5 +246,87 @@
     "fruit_introduction": "ในช่วงฤดูร้อน / ฤดูใบไม้ร่วงช่วงฤดูร้อน / ฤดูใบไม้ร่วงเราจะมีผลไม้เขตร้อนที่มีอุณหภูมิสูงในช่วงฤดูร้อน (เดือนกรกฎาคม - ตุลาคมเป็นฤดูผลไม้) ลูกพีชและแอปเปิ้ลเป็นของขวัญชั้นนำสำหรับแขกประจำชาติซึ่งได้รับการจัดส่งเป็นสมบัติประจำชาติสำหรับคนดังของรัฐบาลต่างประเทศ ด้วยการทำเกษตรอินทรีย์ผลไม้ปลอดจากสารกำจัดศัตรูพืชและได้รับการตรวจสอบจากคณะกรรมการความปลอดภัยด้านการผลิตทางการเกษตรของเมืองไตซุง 100% และได้รับตราสัญลักษณ์และปลอดภัยสำหรับการซื้อและการบริโภค",
     "souvenirs": "ความทรงจำ",
     "souvenirs_introduction": "หมวก, เสื้อผ้า, ของประดับตกแต่ง, กรอบรูป, ชามผลไม้, อ้อย, ร่มและไฟแช็กทั้งหมดขาย ทุกคนมีเครื่องหมาย Wuling และเป็นประโยชน์และมีคุณค่าในความทรงจำสูง เมล็ดสนภูเขาสูงยังมีให้สำหรับผู้ที่กำลังมองหาความสมบัติต่างกัน."
+  },
+  "tour_guide": {
+    "north_bus": "ในเชิงลึกแนะนำรถทัวร์ของหุบเขาเหนือ",
+    "north_price": "เหนือหุบเขาจอดรถ eco ไกด์นำเที่ยว 150元/คน เด็กก่อนวัยเรียนครอบครอง100หยวน ไม่ต้องหาฟรี",
+    "north_weekdays": "วันธรรมดา:จันทร์-ศุกร์",
+    "north_morniing": "ตอนเช้า 9:00 ~ 11:00",
+    "north_afternoon": "ช่วงบ่าย14:30 ~ 16:30",
+    "weekend": "ฮอลิเดย์:วันเสาร์-อาทิตย์",
+    "holiday": "ฤดูร้อน:วันจันทร์ถึงวันอาทิตย์",
+    "weekend_morning": "ตอนเช้า08:00 ~ 10:00；10:00 ~ 12:00",
+    "weekend_afternoon": "ช่วงบ่าย13:30 ~ 15:30；15:30 ~ 17:30",
+    "notice": "โปรดนัดหมายล่วงหน้า และมีการเปลี่ยนแปลงเวลาออกเดินทาง",
+    "north_program": "กำหนดการเดินทางของเหนือหุบเขา",
+    "north_procedure": "ออกเดินทางจากโรงแรมโรงแรมหวู่หลิง→ดู Yutai(ซากุระตะขอและจูบแซลมอน) →ปากปีนเขาหิมะ→บาร์คาเฟ่ป่าตั้งแคมป์ →โรงแรมหวู่หลิงชา(กระบวนการทั้งหมดเกี่ยวกับ2ชั่วโมง)。",
+    "south_waker": "เดินทัวร์ใต้หุบเขาสวน說",
+    "south_price": "ทัวร์แนะนำ eco ใต้หุบเขา ฟรี",
+    "south_guide": "สำหรับการแก้ไขปัญหาคำแนะนำเพียงผู้เยี่ยมชมทุก ๆกอดธรรมชาติของภูเขาและน้ำทะเล ในเวลาเดียวกันสามารถเข้าใจความงามของธรรมชาตินิเวศวิทยา รับประกันวิ่งคุณภาพสูงของคุณ",
+    "south_morning": "ตอนเช้า08:30 ~ 10:30",
+    "south_afternoon": "ช่วงบ่าย14:30 ~ 16:30",
+    "south_program": "กำหนดการเดินทางใต้หุบเขาสวน",
+    "south_procedure": "ออกเดินทางจากโรงแรมโรงแรมหวู่หลิง→ยินดีต้อนรับสะพาน→นกเดินป่า→บูเลอวาร์ดสน→เชคฮอลล์→โรงแรมหวู่หลิงชา(ทั้งหมดเดิน ประมาณ2ชั่วโมง)。"
+  },
+  "itinerary": {
+    "advice": "แนะนำแผนการเดินทาง",
+    "tow_days": "2 วัน 1 คืน",
+    "three_days": "3 วัน 2 คืน",
+    "first_day": "วันแรก",
+    "next_day": "ในวันอื่น ๆ",
+    "third_day": "วันที่สาม",
+    "trip_one": "บ่ายในหุบเขาใต้เดินเล่นหรือจะทัวร์เหนือหุบเขา(ค่าใช้จ่ายต่อคนในทัวร์ด้วยทุนตัวเอง150元)เชคฮอลล์(ต้องตรงกับหุบเขาใต้กำหนดการเดินทาง)สวนชาขึ้นไป เยี่ยมชมพิพิธภัณฑ์มรดกฟาร์ม หิมะตามศูนย์",
+    "trip_two": "ยามเย็นฟังแสดงสดคอนเสิร์ตภูเขา(ฟุราโนะรีสอร์ท2อาคาร ต่อคืน20:30 ~ 21:30ฟรี)กิจกรรมดูดาว(รีสอร์ทในฟูราโนะ2อาคาร ต่อคืน21:30 ~ 22:30)。",
+    "trip_three": "ตอนเช้าขับรถ Taoshan น้ำตก ปิกนิก ส่งคืนเพื่อดู Yutai ช่วงบ่ายไประบบนิเวศสวน ชา และซื้อของที่ระลึก",
+    "note_one": "註1: เส้นทางชาปลูกประมาณ40นาที",
+    "note_two": "註2: ไปน้ำตก Taoshan จอดรถไว้ที่โรงแรมหวู่หลิง แล้วน้ำตกเดินจากวิลล่า(เที่ยวเดียว4.3กิโลเมตร)กลับเกี่ยวกับ2.5-3ชั่วโมง",
+    "trip_four": "บ่ายเดินเล่นหรือทัวร์ทางเหนือหุบเขา(ค่าใช้จ่ายต่อคนในทัวร์ด้วยทุนตัวเอง150元)สวนชาเส้น เยี่ยมชมพิพิธภัณฑ์มรดกฟาร์ม หิมะตามศูนย์ ศูนย์ไต้หวันเชอร์รี่เบ็ดปลาแซลมอนระบบนิเวศ",
+    "tirp_five": "ยามเย็นฟังแสดงสดคอนเสิร์ตภูเขา(ฟุราโนะรีสอร์ท2อาคาร ต่อคืน20:30 ~ 21:30ฟรี)กิจกรรมดูดาว(ฟุราโนะรีสอร์ท2อาคาร ต่อคืน21:30 ~ 22:30)。",
+    "tirp_six": "เส้นทางเดินป่าน้ำตก Taoshan เช้ารับนกพิราบปลา Yutai ดูสาระสำคัญ การรับบัพติศมาไอออน",
+    "trip_seven": "บ่ายภูเขาปีนเขาปาก Camp แคมป์สนุก และเพลิดเพลินกับช่วงบ่ายที่เงียบสงบ",
+    "trip_eight": "ระบบนิเวศทัวร์ใต้หุบเขาในตอนเช้าพูด เยี่ยมชมพิพิธภัณฑ์นิเวศ เชคฮอลล์(ต้องตรงกับหุบเขาใต้กำหนดการเดินทาง)ซื้อของที่ระลึกและ เพลิดเพลินกับจีนหลังจากนั้น",
+    "trail": "โรงแรมหวู่หลิงทางฟาร์ม",
+    "trip_ten": "เลือกนกเส้น0.95กม. ไร่ชาอยู่นอกเส้นทางมีความยาว1.15กิโลเมตร(กลับเกี่ยวกับ40นาที)เส้นทางดูนกผีเสื้อ2.15กิโลเมตร สวนพฤกษศาสตร์ทาคายามะ1.15กม. สนอเวนิว0.3 กม.น้ำตก Taoshan4.3กิโลเมตร(กลับเกี่ยวกับ3ชั่วโมง)"
+  },
+  "tea_saloon": {
+    "name": "ไร่ชาฟาร์ม",
+    "content": "ชาฟาร์มส่วนใหญ่จะขายในผลิตภัณฑ์ส่วนใหญ่ และอาหารบางอย่างเพื่อให้ ผู้ที่ชอบชาและเครื่องดื่มจะมีแบบพิเศษพื้นที่ชา ชมธรรมชาติพันธุ์จากธรรมชาติของชาจะนำรสชาติของคอยุน",
+    "open": "เวลาทำการ: ทุกวัน 07:30 ~ 18:00เย็น ฤดูร้อนและซากุระฤดูกาลทุกวัน07:00 ~ 18:30",
+    "tel": "โทรศัพท์:04-25901268 ",
+    "fax": "โทรสาร:04-25901081 ",
+    "address": "ที่อยู่:42495สันติภาพ Taizhongโรงแรมหวู่หลิงภาคเซียงถนน7-7(ชา)"
+  },
+  "visitor_center": {
+    "name": "ศูนย์บริการท่องเที่ยวฟาร์มโรงแรมหวู่หลิง",
+    "content": "โรงแรมหวู่หลิงศูนย์บริการการท่องเที่ยวของฟาร์มส่วนใหญ่จำหน่ายประจำ(ยาสีฟัน รองเท้า ฯลฯ)และมวลของอาหาร(ขนมขบเคี้ยว เครื่องดื่ม เฉพาะฟาร์มผลิตภัณฑ์ ฯลฯ)。 ",
+    "product": "ร้อนเช่นไก่เส้นบะหมี่ เกี๊ยวน้ำซุป โอเด้ง และเนื้อยากงมีอาหารในวันหยุด ",
+    "open": "เวลาทำการ: ทุกวัน 07:00 ~ 19:00",
+    "tel": "โทรศัพท์:04-25901257นามสกุล:1118 ",
+    "fax": "บรรทัด:04-25901353 ",
+    "address": "ที่อยู่:42495สันติภาพ Taizhongโรงแรมหวู่หลิงภาคเซียงถนน3(ศูนย์บริการท่องเที่ยว) "
+  },
+  "meeting_room": {
+    "conter_method": "1วิธีการกู้ยืมห้องประชุมฟาร์มโรงแรมหวู่หลิง (บรรยายสรุปห้อง)",
+    "center_line": "บรรทัดการลงทะเบียนให้เช่า: (#1111 04-25901258ทุกวัน08:00 ~ 17:00)",
+    "center_first": "ครั้งแรก ขอบเขตของโปรแกรมประยุกต์:",
+    "center_provided": "มีสัมมนาวิชาการต่าง ๆ จัดการประชุม และสถานที่อื่น ๆ ด้วย",
+    "center_second": "วินาที ใช้เวลา:",
+    "center_divided": "วันที่แบ่งออกเป็น08:00 ~ 11:00；14:00 ~ 17:00；18:00 ~ 21:00 3รอบระยะเวลานี้",
+    "center_third": "ประการที่สาม วิธีการยืม:",
+    "center_field": "กรุณาใช้ตัวอักษรอย่างเป็นทางการไปศาล และชื่อของหน่วยยืม วันและเวลาของการกู้ยืม ลักษณะของการประชุม จำนวนผู้เข้าร่วม(รองรับสูงสุด80)",
+    "center_fourth": "Iv. ยืมบทบัญญัติ:",
+    "center_one": "ห้องประชุม(ห้องบรรยายสรุป)สิ่งอำนวยความสะดวกใน(มีโต๊ะ เก้าอี้)รักษาเงื่อนไขที่มีอยู่ ไม่ให้ทำลาย และย้าย",
+    "center_two": "ไม่ใช่ภายในจัดกิจกรรมนันทนาการ สวนสนุก และมื้อค่ำ",
+    "center_three": "เพื่อหลีกเลี่ยงผลกระทบสำนักงาน สั่ง ยืมเวลาควรไม่หนวก และเข้าไปยังห้องบรรยายสรุปเพื่อปิดเสียง",
+    "center_four": "ห้องประชุม(ห้องบรรยายสรุป)การประชุม และห้องแต่งตัวของผู้หญิงและผู้ชายมีพร้อมใช้งาน",
+    "center_fifth": "V. บัญญัติค่าธรรมเนียมและค่าใช้จ่าย:",
+    "center_period": "ค่าธรรมเนียมต่อเซสชัน1500สำหรับชา สุขภัณฑ์ทำความสะอาด อุปกรณ์แสงสว่าง การบำรุงรักษา และบำรุงรักษา(โปรดนำถ้วยและปากกาลูกลื่นสีเขียวของคุณเอง)",
+    "center_copy": "สำเนา $20หยวนโทรสาร $10"
+  },
+  "coffee_bar": {
+    "name": "ป่ากาแฟ",
+    "content": "30ซีดาร์ปีตั้งอยู่ ดื่มชานมพิเศษลาเวนเดอร์ที่ฟาร์ม กับวเฟิ่นจิงป่าคบ！",
+    "product": "ไข่เค้ก หัวหอมอบกรอบ ก๋วยเตี๋ยวไก่หยอง พาสต้า พิซซ่ามีในสถานที่(5吋)หนา ถุงเนื้อ เนื้อเกี๊ยว ไมค์ไก่ ฯลฯ เครื่องดื่มร้อนชานม กาแฟ โกโก้ ชา ชา และอื่น ๆ ขิง",
+    "tel": "โทรศัพท์:04-25901469"
   }
 }
