--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -97,43 +97,43 @@
         "cherry_room": "Phòng 4 người (phòng Cherry)"
     },
     "campsite": {
-        "title": "Giới thiệu",
-        "about": "Khu cắm trại Wuling Farm nằm trong Vườn Bách thảo Alpine. Công viên có hồ bơi sinh thái, hồ bơi nước, công viên y học Trung Quốc, vườn cỏ, vùng biển hoa, v.v. Được bao quanh bởi những ngọn núi, từ Trạm Kiểm soát Núi Tuyết đến Biệt thự Núi Sevenka, bạn có thể thấy rõ cao điểm. Đó là thiên đường mùa hè thiên nhiên hiếm hoi ở Trung Quốc. Đó là thiên đường mùa hè thiên nhiên hiếm hoi ở Trung Quốc. Nó là một khu nghỉ mát mùa hè tự nhiên trong cả nước.",
-        "order_notice": "Khu vực cắm trại sẽ mở hệ thống đặt chỗ lúc 8:00 sáng vào ngày 1 của tháng (bao gồm 3 tháng trong tháng).",
-        "order_example": "Ví dụ: ngày 1 tháng 5 lúc 8:00 sáng đến ngày 31 tháng 7, ngày 1 tháng 2 lúc 8:00 sáng, mở cửa đến cuối tháng 2 năm sau.",
-        "telephone": "Điện thoại 04-25901470 / 04-25901265 Fax 04-25901088",
-        "coffee_bar": "Bên cạnh trung tâm quản lý cắm trại, có một quán cà phê rừng. Cây tuyết tùng 30 tuổi đứng bên cạnh nó, uống một tách trà sữa oải hương đặc biệt từ Wuling Farm, và hẹn hò với Rừng Fendojing!",
-        "alert": "Để đảm bảo sự an toàn của rừng, tuyệt đối không được tiếp xúc với đất bằng lửa, và nó chỉ có thể được nấu bằng bình gas hoặc thịt nướng. Khu vực cắm trại có phòng tắm đầy đủ và nước nóng 24 giờ / ngày.",
-        "rule": "Khu cắm trại này nằm trong Vườn Quốc gia Shei-Pa. Các trại viên nên tuân thủ các quy tắc sau đây:",
-        "rule_01": "Lửa trại, tay cầm đánh lửa, pháo nổ bị nghiêm cấm trong khu vực cắm trại, lò nướng thịt nướng được sử dụng để nướng thịt ngoài trời, và các vụ cháy carbon không được phép chạm trực tiếp vào mặt đất.",
-        "rule_02": "Vật nuôi không được phép trong khu vực cắm trại, và các quy định có liên quan được công bố bởi Cục dịch vụ rừng.",
-        "rule_03": "Đừng tự ý trèo lên hoa, cây và trái cây ngâm.",
-        "rule_04": "Có hai loại rác trong khu vực cắm trại: tái chế chất thải nhà bếp và rác thải tổng hợp (bao gồm cả các vật liệu tái chế tài nguyên).",
-        "rule_05": "Không được sử dụng máy phát và thiết bị âm thanh decibel cao trong trại.",
-        "rule_06": "Khách du lịch trong trại bị cấm sau 10 giờ tối vào buổi tối, và vui lòng ngừng hoạt động của bạn và giảm âm lượng để không ảnh hưởng đến hòa bình của người khác.",
-        "rule_07": "Khách truy cập vào tài khoản trống không nên ăn đồ ăn nhẹ như bánh quy kẹo trong tài khoản trống để tránh côn trùng xâm nhập.",
-        "rule_08": "Thời gian cắm trại là 12:00 trưa và thời gian cắm trại là 12:00 trưa ngày hôm sau.",
-        "rule_09": "2 người trong một ngôi nhà đáng yêu, 4 người trong một ngôi nhà cảnh quan, và phòng phòng lúc 14:00, hãy kiểm tra thời gian lúc 11:00 sáng ngày hôm sau.",
-        "rule_10": "Quán bar cà phê trong khu vực cắm trại phục vụ bữa sáng, đồ uống, bánh mì sandwich, bánh quiche, mì gà và nhiều hơn nữa.",
-        "rule_11": "Trung tâm quản lý trại mở cửa từ 7:00 đến 21:30.",
-        "rule_12": "Cư dân khu vực không cắm trại nấu ăn trong khu vực cắm trại cho mỗi 6 người để tính phí địa điểm nấu ăn của NT $ 200, 12 người NT $ 400 và như vậy.",
-        "rule_13": "Khi hành khách vào khu vực cắm trại, họ phải báo cáo với trung tâm quản lý và yêu cầu một hóa đơn thống nhất làm bằng chứng về việc sử dụng khu vực cắm trại.",
-        "rule_15": "Tất cả các khu vực của khu vực cắm trại đều có ánh sáng vào ban đêm.",
-        "rule_16": "Thời gian cấp nước nóng: Phòng tắm công cộng tại các khu vực A1, D, E: 24 giờ nước nóng (hàng ngày), với máy sấy tóc. Nhà vệ sinh công cộng ở cả hai phía của trung tâm quản lý: Nồi hơi được cung cấp nước nóng từ 17: 00-22: 00 (chỉ có vào các ngày lễ), và chỉ có một nước nóng 24 giờ (nước cuối dành cho nam và nữ) với máy sấy tóc.",
-        "rule_17": "Có một cửa hàng công cộng và một tủ lạnh ở phía trước của trung tâm quản lý cho du khách.",
-        "rule_18": "Tất cả các đặt phòng trong khu vực cắm trại, bao gồm cả trại và nhà gỗ, thủ tục chuyển tiền không được hoàn thành vào ngày, khu vực cắm trại có quyền xóa."
-    },
-    "tea_saloon": {
-        "name": "Wuling trang trại trà saloon",
-        "tel": "Điện thoại: 04-25901268",
-        "fax": "Fax: 04-25901081",
-        "address": "Địa chỉ nhà: No. 7-7, Wuling Road, Pingli, Pinghe Township, Taichung City, 42495 (Tea Village)"
-    },
-    "visitor_center": {
-        "name": "Trung tâm dịch vụ nông trại Wuling",
-        "tel": "Điện thoại: 04-25901257 ext.: 1118",
-        "fax": "Điện thoại: 04-25901353",
-        "address": "Địa chỉ nhà: No. 3 Wuling Road, Pingli, Pinghe Township, Taichung City, 42495 (Travel Service Center)"
+        "about": "Vị trí Wuling Farm cắm trại ở vườn thực vật núi cao, công viênTrời sinh thái được xây dựng trong, nhà máy nước Hồ bơi, công viên truyền thống y học Trung Quốc, cỏ Sân vườn, hoa lá, vv, bao quanh bởi các dãy núi, núi tuyết kiểm soát ga bảy thẻ villa, có thểThấy rõ nameless đỉnh Trung tâm Jianshan, Nam hồ núi đỉnh, Luo Yelun, đào; shan lan aqua, tiancheng tự nhiên, là quốc giaÂm nhạc mùa hè tự nhiên quý hiếm trong cácPark.",
+        "camp_pallet": "Cắm trại vị trí",
+        "price": "Bảng giá",
+        "remark": "Lưu ý",
+        "a1_car_pallet": "AKhu vựcA1Huyện Auto Pallet Ban",
+        "a1_car_pallet_type": "Phải tự làm lều, trại pallet gỗ 。(A1Diện tích là300 cm * 300 cm，ADiện tích là320 cm * 300 cm)。",
+        "a1_car_pallet_remark": "Điện ổ cắm khối b, Bàn ăn độc quyền, sử dụngA1Huyện khu vực tắm, chỗ đỗ xe độc quyền.",
+        "b_tent": "BKhu vực trên không lều",
+        "b_tent_type": "có ngồi trong lều trại, ngủ thảm (210 cm * 240 cm)。 Giá đỡ cao50cm (b)或80cm (BA)。",
+        "b_tent_remark": "Không có ổ cắm điện, Bàn ăn độc quyền, sử dụng nhà vệ sinh công cộng trên cả hai mặt của Trung tâm quản lý, sử dụng các đậu xe công cộng, 'thú cưng không được phépNội bộ '.",
+        "c_tent": "CDiện tích đất trống khoản",
+        "c_tent_type": "có ngồi trong lều trại, ngủ thảm(240 cm * 240 cm)。",
+        "c_tent_remark": "Điện ổ cắm khối b, Bàn ăn độc quyền, việc sử dụng quản lý trung tâm tắm, chỗ đỗ xe độc quyền.",
+        "c_car_pallet": "CKhu vực xe Pallet Camp vị trí",
+        "c_car_pallet_type": "Phải được tự xây dựng lều, pallet gỗ trại.(420 cm * 420 cm)。",
+        "c-car_pallet_remark": "Điện ổ cắm khối b, Bàn ăn độc quyền, việc sử dụng quản lý trung tâm tắm, chỗ đỗ xe độc quyền.",
+        "d_car_pallet": "D1Khu vực xe Pallet Camp vị trí",
+        "d_car_pallet_type": "Phải tự làm lều, trại pallet gỗ 。(300 cm * 320 cm)。",
+        "d-car_pallet_remark": "Ổ cắm điện, Bàn ăn uống độc đáo, sử dụngDHuyện khu vực tắm, chỗ đỗ xe độc quyền.",
+        "e_car_pallet": "、EHuyện Auto Pallet Ban",
+        "e_car_pallet_type": "Phải tự làm lều, trại pallet gỗ (d1 ~ d12 300 cm * 320 cm, phần còn lại là220 cm * 320 cm)。",
+        "e-car_pallet_remark": "Ổ cắm điện, Bàn ăn uống độc đáo, sử dụngD區đHuyện khu vực tắm, chỗ đỗ xe độc quyền.",
+        "camp_cottage": "Cắm trại nhà",
+        "a1_cottage": " A1.Huyện xem nhà",
+        "weekdays": "Ngày trong tuần",
+        "holiday": "Kỳ nghỉ",
+        "a1_cottage_type": "chiếu sáng, mãi (240 cm * 240 cm), bộ đồ giường phải được cung cấp, ngủCácNgười.",
+        "al_cottage_remark": "Với ổ cắm điện(Cho điện thoại di động sạc chỉ), Bàn ăn độc quyền, sử dụngA1Huyện khu vực tắm, độc quyền bãi đậu xe không gian、『Vật nuôi bị cấm nhập內』",
+        "a_cottage": "A、D.Dễ thương nhà cắm trại",
+        "a_cottage_type": "chiếu sáng, mãi (195 cm * 195 cm), Có thể ngủ3người, giường phải được tự sở hữu.",
+        "a_cottage_remark": "Với ổ cắm điện(Cho điện thoại di động sạc chỉ), Bàn ăn độc quyền, sử dụngA1區/ dHuyện khu vực tắm, độc quyền bãi đậu xe không gian、『Vật nuôi bị cấm nhập內』。",
+        "b_cottage": "B.Sơn nhà",
+        "b_cottage_type": "Ngủ Mat (187 cm * 220 cm)Cao100cm (BH)。",
+        "b_cottage_remark": "Ổ cắm điện, Bàn ăn uống độc quyền, quyền truy cập vào nhà vệ sinh công cộng trên cả hai mặt của Trung tâm quản lý khu vực đậu xe、『Vật nuôi bị cấm nhập內』。",
+        "d_cottage": "D1.Ngôi nhà mơ ước",
+        "d_cottage_type": "ỞD1Khu vực cắm trại mới tích chalet, ngủ2 + 1Người.",
+        "d_cottage_remark": "Với ổ cắm điện(Cho điện thoại di động sạc chỉ), Bàn ăn độc quyền, sử dụngDHuyện khu vực tắm, độc quyền bãi đậu xe không gian、『Vật nuôi bị cấm nhập』。"
     },
     "ticket": {
         "ticket_price": "Bảng giá vé vào cửa Wuling Farm Entrance",
@@ -246,5 +246,89 @@
         "fruit_introduction": "Chúng tôi có trái cây miền núi ôn đới cao, chín vào những tháng mùa hè / mùa thu (tháng 7 đến tháng 10 là mùa trái cây), đào và táo là món quà hàng đầu dành cho khách quốc gia, được coi là kho báu quốc gia cho những người nổi tiếng của chính phủ nước ngoài. Với canh tác hữu cơ, trái cây không có thuốc trừ sâu và được 100% kiểm tra bởi Ủy ban An toàn Sản xuất Nông nghiệp của Chính quyền Thành phố Đài Trung và được cấp logo cũng như an toàn cho việc mua và tiêu thụ.",
         "souvenirs": "Đồ lưu niệm",
         "souvenirs_introduction": "Mũ, quần áo, đồ trang trí, khung ảnh, bát trái cây, gậy, dù che và bật lửa đều được bán. Tất cả đều mang dấu ấn Wuling và hữu ích và có giá trị tưởng niệm cao. Các hạt thông cao núi, cũng có sẵn cho những người đang tìm kiếm một loại kho báu khác nhau."
+    },
+    "tour_guide": {
+    "north_bus": "Chi tiết hướng dẫn tour du lịch xe buýt của thung lũng Bắc",
+      "north_price": "North Valley Park xe buýt tour du lịch sinh thái-hướng dẫn 150/người dân, trước khi trẻ em đến trường chiếm100nhân dân tệ, không chiếm một nơi miễn phí",
+      "north_weekdays": "Ngày trong tuần:Thứ hai đến thứ sáu",
+      "north_morniing": "Buổi sáng 9:00 ~ 11:00",
+      "north_afternoon": "Buổi chiều14:30 ~ 16:30",
+      "weekend": "Kỳ nghỉ:Thứ bảy đến Chủ Nhật",
+      "holiday": "Mùa hè:Thứ hai đến Chủ Nhật",
+      "weekend_morning": "Buổi sáng08:00 ~ 10:00；10:00 ~ 12:00 ",
+      "weekend_afternoon": "Buổi chiều13:30 ~ 15:30；15:30 ~ 17:30 ",
+      "notice": "Xin vui lòng hẹn trước và thời gian khởi hành có thể thay đổi.",
+      "north_program": "Hành trình của North Valley Park",
+      "north_procedure": "Khởi hành từ Wuling khách sạn→Xem ngư(Hoa anh đào móc và nụ hôn cá hồi) →Miệng leo núi tuyết→Cắm trại lá rừng Cafe Bar →Trà Wuling(Toàn bộ quá trình về2Giờ)。",
+      "south_waker": "Đi tour du lịch của South Valley Park",
+      "south_price": "Tour du lịch sinh thái hướng dẫn South Valley Miễn phí",
+      "south_guide": "Bởi giải phápHướng dẫn sinh động cho mỗi khách truy cập.Ôm hôn tự nhiên của những ngọn núi và biển, cùng lúc có thể hiểu vẻ đẹp của thiên nhiên sinh thái, làm phong phú thêm chất chạy của bạn.",
+      "south_morning": "Buổi sáng08:30 ~ 10:30 ",
+      "south_afternoon": "Buổi chiều14:30 ~ 16:30 ",
+      "south_program": "Hành trình South Valley Park",
+      "south_procedure": "Khởi hành từ Wuling khách sạn→Chào mừng bạn đến cầu→Con chim đi bộ các con đường mòn→Pine Boulevard→Shek Hall→Trà Wuling(Toàn bộ đi, về2Giờ)。"
+
+    },
+    "itinerary": {
+        "advice": "Hành trình gợi ý",
+        "tow_days": "Hai ngày, một đêm.",
+        "three_days": "Ba ngày, 2 đêm.",
+        "first_day": "Ngày đầu tiên",
+        "next_day": "Các ngày khác",
+        "third_day": "Ngày thứ ba",
+        "trip_one": "Buổi chiều ở South Valley tản bộ hoặc đi các tour du lịch xe buýt Bắc lũng(Chi phí cho mỗi người tại tư phí Tour150), Shek Hall(Phải phù hợp với hành trình South Valley), Tea garden ascend, ghé thăm bảo tàng di sản trang trại, tuyết chiếm Trung tâm khách truy cập.",
+        "trip_two": "Buổi tối nghe buổi hòa nhạc hiệu suất sống núi(Furano Resort2xây dựng, một đêm20:30 ~ 21:30Miễn phí), các hoạt động xem sao(Furano-furano Resort2xây dựng, một đêm21:30 ~ 22:30)。",
+        "trip_three": "Sáng nay lái xe đào thác nước, dã ngoại, trở lại để xem ngư. Buổi chiều thăm các sinh thái park, trà và mua quà lưu niệm.",
+        "note_one": "1: Tea Plantation Trail khoảng40Phút.",
+        "note_two": "2: Đi đào thác, công viên xe của bạn tại Wuling, sau đó đi bộ đến thác nước từ biệt thự(Chuyến đi duy nhất4.3Cây số)Vòng chuyến đi về2,5 ~ 3Giờ.",
+        "trip_four": "Buổi chiều dạo hoặc tour du lịch bằng xe buýt thung lũng Bắc(Chi phí cho mỗi người tại tư phí Tour150), Đường mòn Tea garden, ghé thăm bảo tàng di sản trang trại, tuyết chiếm Trung tâm du khách, Trung tâm Đài Loan anh đào móc cá hồi sinh thái;",
+        "tirp_five": "Buổi tối nghe buổi hòa nhạc hiệu suất sống núi(Furano Resort2xây dựng, một đêm20:30 ~ 21:30Miễn phí), các hoạt động xem sao(Furano Resort2xây dựng, một đêm21:30 ~ 22:30)。",
+        "tirp_six": "Sáng đào thác Forest Trail nhận được Dove tinh túy, anion bí tích rửa tội, xem cá ngư;",
+        "trip_seven": "Buổi chiều núi leo lên miệng, cắm trại Camp thưởng thức phong cảnh và tận hưởng buổi chiều yên tĩnh.",
+        "trip_eight": "Tour du lịch có hướng dẫn viên sinh thái của thung lũng Nam vào buổi sángnói, ghé thăm bảo tàng sinh thái, Shek Hall(Phải phù hợp với hành trình South Valley), Mua quà lưu niệm và vân vân, tận hưởng Trung Quốc sau khi trở về.",
+        "trail": "Wuling trang trại đường mòn",
+        "trip_ten": "Chọn chim con đường mòn0,95km, đồn điền trà bên ngoài đường mòn là dài1.15Cây số(Vòng chuyến đi về40Phút), những con đường mòn đến bướm2.15km, Takayama Botanical Garden1.15km, Pine Avenuecách 0.3km, Đào Waterfall4.3Cây số(Vòng chuyến đi về3Giờ)"
+    },
+    "tea_saloon": {
+      "name": "Wuling Farm Tea Plantation",
+      "content": "Wuling trang trại trà chủ yếu được bán tạiSản phẩm chủ yếu, và một số thực phẩm nóng để cung cấp. và cung cấp một yêu thích trà và thức uống khách du lịch, có là một không gian độc quyền trà, tận hưởng môi trường tự nhiên lai ra bản chất của trà mang lại hương vị của cổ họng Yun.",
+      "open": "Giờ mở cửa: Hàng ngày 07:30 ~ 18:00, lạnh, mùa hè và hoa anh đào mùa mỗi ngày07:00 ~ 18:30 ",
+      "tel": "Điện thoại:04-25901268 ",
+      "fax": "Số Fax:04-25901081 ",
+      "address": "Địa chỉ:42495Taizhong hòa bìnhỞ Xiang bình đẳng Wuling road7-7(Trà)"
+    },
+    "visitor_center": {
+      "name": "Trung tâm dịch vụ du lịch Wuling trang trại",
+      "content": "Wuling trang trại du lịch Dịch vụ trung tâm chủ yếu là bán nhu cầu thiết yếu hàng ngày(dép đi trong phòng, kem đánh răng, vv.)và hàng loạt thực phẩm(bánh quy, đồ uống, dành riêng cho trang trạisản phẩm, v.v...)。 ",
+      "product": "Bữa ăn nóng sốt như phở shredded gà, gong pill súp, oden và thịt, bánh bao được phục vụ vào kỳ nghỉ. ",
+      "open": "Giờ mở cửa: Hàng ngày 07:00 ~ 19:00 ",
+      "tel": "Điện thoại:04-25901257Tiện ích mở rộng:1118 ",
+      "fax": "Đường dây:04-25901353 ",
+      "address": "Địa chỉ:42495Taizhong hòa bìnhỞ Xiang bình đẳng Wuling road3號(Trung tâm dịch vụ du lịch) "
+    },
+    "meeting_room": {
+      "conter_method":" 1.Các phương thức vay Wuling trang trại phòng họp (họp phòng).",
+      "center_line": "Đường đăng ký cho thuê: 04-25901258 #1111)Hàng ngày08:00 ~ 17:00) ",
+      "center_first": "trước tiên, phạm vi áp dụng:",
+      "center_provided": "Cung cấp cho các buổi hội thảo học thuật khác nhau, các cuộc họp hành chính và địa điểm khác.",
+      "center_second": "Thứ hai, sử dụng thời gian:",
+      "center_divided": "Hàng ngày, chia thành08:00 ~ 11:00；14:00 ~ 17:00；18:00 ~ 21:00等3Giai đoạn này.",
+      "center_third": "Thứ ba, cách vay:",
+      "center_field": "Xin vui lòng sử dụng lá thư chính thức của tòa án, và tên của các đơn vị vay, ngày và thời gian vay mượn, bản chất của các cuộc họp, số lượng người tham gia.(Chứa lên đến80人)",
+      "center_fourth": "IV. vay quy định:",
+      "center_one": "Phòng Hội nghị(Phòng họp)Tất cả các tiện nghi trong(Bao gồm bàn, ghế)Duy trì các điều kiện hiện tại, không phải để tiêu diệt và di chuyển.",
+      "center_two": "Không nằm trongTổ chức các hoạt động như vui chơi giải trí, vui chơi và ăn tối.",
+      "center_three": "Để tránh ảnh hưởng đến văn phòng hàng, vay mượn thời gian nên không được ồn ào, và truy cập vào phòng họp để giữ yên tĩnh.",
+      "center_four": "Phòng Hội nghị(Phòng họp)Cuộc họp được cung cấp, và những người đàn ông và phụ nữ phòng thay đồ có sẵn để sử dụng.",
+      "center_fifth": "V. các điều khoản cho các khoản phí và lệ phí:",
+      "center_period": "Tính phí cho mỗi phiên1500Trà, thiết bị vệ sinh làm sạch, thiết bị chiếu sáng, bảo trì và bảo dưỡng.(Vui lòng mang theo của riêng bạn tách màu xanh lá cây và cây bút ballpoint)",
+      "center_copy":" sao chép$ 20Nhân dân tệFax$ 10"
+    },
+    "coffee_bar" :{
+      "name":"Rừng cà phê Bar",
+      "content":" 30Tuổi Cedar đứng bên cạnh, uống một cốc Wuling trang trại trà đặc biệt hoa oải hương, thêm với Fen Jing để hẹn hò rừng!", 
+      "product":"Trứng bánh ngọt, bánh onion, shredded gà mì, mì ống, Pizza có sẵn trên trang web(5吋), Mike gà cốm, lát dày, thịt túi, bánh bao thịt, vv nóng đồ uống quán trà sữa, cà phê, ca cao, gừng trà, trà và như vậy.",   
+      "tel":"Điện thoại:04-25901469"    
     }
+  
 }
