repair english file

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -310,7 +310,7 @@
     "trip_ten":"Choose the bird watching trail 0.95 km, the tea garden trail is 1.15 km long (about 40 minutes round trip), the bird watching butterfly trail 2.15 km, the alpine botanical garden 1.15 km, the pine forest avenue 0.3 km, the Taoshan waterfall 4.3 km (about 3 hours back and forth)"
   },
   "meeting_room": {
-    "center_method": "Wuling Farm Conference Room (Briefing Room) borrowing method.",
+    "conter_method": "Wuling Farm Conference Room (Briefing Room) borrowing method.",
     "center_line": " phone: 04-25901258 #1111 (08:00~17:00 daily)",
     "center_first": "First, the scope of application:",
     "center_provided": "Provided as a venue for various academic seminars, executive meetings, etc.",
