--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -249,7 +249,7 @@
   },
   "tour_guide": {
     "north_bus": "ในเชิงลึกแนะนำรถทัวร์ของหุบเขาเหนือ",
-    "north_price": "เหนือหุบเขาจอดรถ eco ไกด์นำเที่ยว 150元/คน เด็กก่อนวัยเรียนครอบครอง100หยวน ไม่ต้องหาฟรี",
+    "north_price": "เหนือหุบเขาจอดรถ eco ไกด์นำเที่ยว 150/คน เด็กก่อนวัยเรียนครอบครอง100หยวน ไม่ต้องหาฟรี",
     "north_weekdays": "วันธรรมดา:จันทร์-ศุกร์",
     "north_morniing": "ตอนเช้า 9:00 ~ 11:00",
     "north_afternoon": "ช่วงบ่าย14:30 ~ 16:30",
@@ -260,7 +260,7 @@
     "notice": "โปรดนัดหมายล่วงหน้า และมีการเปลี่ยนแปลงเวลาออกเดินทาง",
     "north_program": "กำหนดการเดินทางของเหนือหุบเขา",
     "north_procedure": "ออกเดินทางจากโรงแรมโรงแรมหวู่หลิง→ดู Yutai(ซากุระตะขอและจูบแซลมอน) →ปากปีนเขาหิมะ→บาร์คาเฟ่ป่าตั้งแคมป์ →โรงแรมหวู่หลิงชา(กระบวนการทั้งหมดเกี่ยวกับ2ชั่วโมง)。",
-    "south_waker": "เดินทัวร์ใต้หุบเขาสวน說",
+    "south_waker": "เดินทัวร์ใต้หุบเขาสวน",
     "south_price": "ทัวร์แนะนำ eco ใต้หุบเขา ฟรี",
     "south_guide": "สำหรับการแก้ไขปัญหาคำแนะนำเพียงผู้เยี่ยมชมทุก ๆกอดธรรมชาติของภูเขาและน้ำทะเล ในเวลาเดียวกันสามารถเข้าใจความงามของธรรมชาตินิเวศวิทยา รับประกันวิ่งคุณภาพสูงของคุณ",
     "south_morning": "ตอนเช้า08:30 ~ 10:30",
@@ -328,5 +328,11 @@
     "content": "30ซีดาร์ปีตั้งอยู่ ดื่มชานมพิเศษลาเวนเดอร์ที่ฟาร์ม กับวเฟิ่นจิงป่าคบ！",
     "product": "ไข่เค้ก หัวหอมอบกรอบ ก๋วยเตี๋ยวไก่หยอง พาสต้า พิซซ่ามีในสถานที่(5吋)หนา ถุงเนื้อ เนื้อเกี๊ยว ไมค์ไก่ ฯลฯ เครื่องดื่มร้อนชานม กาแฟ โกโก้ ชา ชา และอื่น ๆ ขิง",
     "tel": "โทรศัพท์:04-25901469"
+  },
+  "traffic": {
+    "road_status": "ประกาศการจราจร",
+    "notice_date": "วัน",
+    "notice_section": "ส่วน",
+    "notice_contect": "เนื้อหา"
   }
 }
