repair thi langauge

--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -46,7 +46,8 @@
     "road_status": "路況公告",
     "notice_date": "日期",
     "notice_section": "路段",
-    "notice_contect": "內容"
+    "notice_contect": "內容",
+    "notice_sorce": "警察廣播電台"
   },
   "wuling-hotel": {
     "introduction": "本場提供武陵國民賓館、休閒農莊及山水館等多樣化的住宿及房型選擇。提供兩人房、三人房、四人房、六人房及無障礙房間，價格則從每間客房$3420至$7500 元不等。",
@@ -127,8 +128,8 @@
     "introduction": "賓館大廚配合時令，精心調製推出具有特色的高麗菜大餐、蘋果大餐、茶葉餐等、平日在山下吃不到的有機蔬果、以及現採高山野菜，提供給喜愛嘗鮮的遊客最佳選擇。",
     "fare": "餐飲介紹",
     "breakfast": "早餐",
-    "lunch": "午餐",
-    "dinner": "晚餐",
+    "lunch": "午餐 11:30~14:00",
+    "dinner": "晚餐 17:30~20:00",
     "breakfast_family": "中式早餐(十人份) NT$1500/桌。",
     "location_Plum": "用餐地點:梅花廳/楓味廳。",
     "breakfast_buffet": "中西式自助餐  NT$150/人，小朋友100元(身高115cm~150cm)，國中生以上 NT$ 150/人。",
@@ -141,8 +142,7 @@
     "lunch_set": "中午半自助式套餐",
     "private_set": "半自助式套餐 NT$300/人，小朋友170元(身高115cm~150cm),國中生以上 NT$ 300/人，亦有供應素食。",
     "dinner_buffet": "自助式晚餐",
-    "buffet_price": "自助餐 NT$350/人，小朋友200元(身高115cm~150cm)，國中生以上 NT$ 350/人。",
-    "buffet_note": "住客眾多時，晚餐分為兩個時段用餐17:30~18:50及19:00~20:20，由櫃台統籌分配。"
+    "buffet_price": "自助餐 NT$350/人，小朋友200元(身高115cm~150cm)，國中生以上 NT$ 350/人。"
   },
   "ecotourism": {
     "ecology": "生態介紹",
@@ -220,10 +220,7 @@
     "by_van": "搭乘專車",
     "ego_bus": "台灣觀光巴士(全程4小時，每天發車，需3天前訂車，電話02-27965696)",
     "ego_taipei_wuling": "台北火車站-東3入口~迎賓橋~醫療站~富野渡假村。發車時間 07:30",
-    "ego_wuling_taipei": "富野渡假村大門~醫療站~迎賓橋~台北火車站。發車時間 13:30",
-    "bear_bus": "梨山熊巴士(全程4小時，每天發車，需7天前訂車，電話04-22653939)",
-    "bear_taipei_wuling": "台北火車站(東3入口)~武陵農場遊客中心。發車時間 07:50",
-    "bear_wuling_taipei": "武陵農場遊客中心~台北火車站。發車時間 14:10",
+    "ego_wuling_taipei": "富野渡假村大門~醫療站~迎賓橋~台北火車站。發車時間 13:30",    
     "lion_bus": "雄獅通運巴士(台北-武陵交通專線，全程4小時，每天發車，需3天前訂車，訂位電話02-87939611)",
     "lion_taipei_wuling": "台北火車站站前門市集合~武陵農場遊客中心。發車時間 06:40",
     "lion_wuling_taipei": "武陵農場遊客中心~台北火車站。發車時間 16:30",
@@ -274,21 +271,17 @@
     "name": "武陵農場茶莊",
     "content": "武陵農場茶莊主要販賣以茶葉及農特產品為主，並有一些熱食提供。且提供喜愛泡茶喝的遊客，有一專屬泡茶空間，享受這自然環境孕育出來天然茶葉帶來的香韻潤喉滋味。",
     "open": "營業時間: 每日 07:30~18:00；寒、暑假及櫻花季期間每日07:00~18:30",
-    "tel": "電話：04-25901268 ",
-    "fax": "傳真：04-25901081 ",
-    "address": "地址：42495台中市和平鄉平等里武陵路7-7號(茶莊)"
+    "holiday":"寒、暑假及櫻花季期間每日07:00~18:30"    
   },
   "visitor_center": {
     "name": "武陵農場旅服中心",
     "content": "武陵農場旅遊服務中心主要販賣日常用品(拖鞋、牙膏等)與大眾食品(餅乾、飲料、農特產品等)。 ",
     "product": "假日提供雞絲麵、貢丸湯、關東煮、肉粽等熱食 ",
-    "open": "營業時間: 每日 07:00~19:00",
-    "tel": "電話：04-25901257分機：1118 ",
-    "fax": "專線：04-25901353 ",
-    "address": "地址：42495台中市和平鄉平等里武陵路3號(旅服中心) "
+    "open": "營業時間: 每日 07:00~19:00"
+   
   },
   "meeting_room": {
-    "conter_method": "1.武陵農場會議室（簡報室）借用方式。",
+    "conter_method": "武陵農場會議室（簡報室）借用方式。",
     "center_line": "租用登記專線: 04-25901258 #1111 (每天08:00~17:00)",
     "center_first": "一、適用範圍：",
     "center_provided": "提供為各項學術研討會、行政會議等之召開場所。",
